--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
             </ul>
         </header>
         <section class="description">
-            <img src="./img/logo_helix.svg" class="description__logo--helix"
-                alt="Логотип медицинского учреждения Хеликс">
+            <h1 class="description__logo">
+                <span style="color: #3BD04E;">ХЕЛИКС</span>-ПРО
+            </h1>
             <h1>
                 ГОТОВЫЙ СЕРВИС ДЛЯ ВЛАДЕЛЬЦЕВ ФРАНШИЗЫ
             </h1>
             <p>
-                "Хеликс - Про" помогает владельцам клиник зарабатывать больше
+                Мы помогаем владельцам клиник зарабатывать больше
             </p>
         </section>
     </div>
@@ -2151,7 +2152,8 @@
                             src="./img/yandex2021.png" class="partners__logo" title="">
                         <!-- <span class="partners__toggler">?</span> -->
                     </a>
-                    <a class="about__link__container" href="https://yandex.ru/adv/contact/agency/partner?url=a1-reklama.ru&amp;countries%5B%5D=225&amp;cities%5B%5D=973">
+                    <a class="about__link__container"
+                        href="https://yandex.ru/adv/contact/agency/partner?url=a1-reklama.ru&amp;countries%5B%5D=225&amp;cities%5B%5D=973">
                         <img src="./img/certified_agency.svg" alt="Сертифицированное агентство" />
                         <div>
                             <p>
